Robert Hogan. WIP. Added a couple images with spacing issues, added the heading, and nav bar.

--- a/css/index.css
+++ b/css/index.css
@@ -8249,3 +8249,12 @@ h5 {
   font-family: 'Russo One', sans-serif;
   color: #22283B;
 }
+.img1 {
+  max-width: 90%;
+}
+.img2 {
+  max-width: 90%;
+}
+.img3 {
+  max-width: 90%;
+}
