--- a/less/layout.less
+++ b/less/layout.less
@@ -6,3 +6,15 @@ h1, h2, h3, h4, h5 {
     font-family: 'Russo One', sans-serif;
     color: @secondary-color;
 }
+
+.img1 {
+    max-width: 90%;
+}
+
+.img2 {
+    max-width: 90%;
+}
+
+.img3 {
+    max-width: 90%;
+}
